syntax = "proto3";

package auth;

option go_package = "./api_gateway/pkg/article/pb";
import "google/protobuf/timestamp.proto";


  // CreateArticleRequest
  message CreateArticleRequest {
    string Id = 1;
    string title = 2;
    string content  = 3;
    string Author = 4;
    bool isDraft = 5;
    repeated string Tags = 6;
    google.protobuf.Timestamp createTime = 7;
    google.protobuf.Timestamp updateTime = 8;
    bool quickRead = 9;
  }
  
  message CreateArticleResponse {
    int64 status = 1;
    string error = 2;
    int64 id = 3;
  }
  
message GetArticlesRequest{}

message GetArticlesResponse {
  string Id = 1;
  string title = 2;
  string content  = 3;
  string Author = 4;
  google.protobuf.Timestamp createTime = 5;
  bool quickRead = 6;
  repeated string viewBy = 7;
}


  
  service ArticleService {
    rpc CreateArticle(CreateArticleRequest) returns (CreateArticleResponse) {}
    rpc GetArticles (GetArticlesRequest) returns (stream GetArticlesResponse){};
  }